feat: add resilient remote tag selector